--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,12 @@
         "dev": "node --watch index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "resend": "^3.2.0",
-        "dotenv": "^16.4.1",
-        "mysql2": "^3.6.5",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.6.5",
+        "nodemailer": "^8.0.1"
     }
 }
